add TEMP_FAILURE_RETRY to file_descriptor::reset(); add move ctor tests

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -14,6 +14,7 @@ target_include_directories(tests PRIVATE
 target_link_libraries(tests PRIVATE
         catch2::catch2_with_main
         common
+        ${CMAKE_DL_LIBS}
 )
 
 catch_discover_tests(tests)
